--- a/src/App.css
+++ b/src/App.css
@@ -137,3 +137,10 @@ input:-webkit-autofill:active{
   }
 
 }
+
+@media screen and (max-width : 700px) {
+  #create-employee {
+    width: 100%;
+    margin: 0;
+  }
+}
