--- a/src/App.css
+++ b/src/App.css
@@ -120,7 +120,7 @@ input:-webkit-autofill:active{
   width: 95%;
   margin: auto;
   margin-top: 25px;
-  overflow: scroll;
+  overflow-x: scroll;
 }
 @media screen and (max-width : 1060px){
   .employee-table-container{
